k8s/flashcards/service.yaml
---
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: flashcards
  namespace: flashcards
spec:
  template:
    spec:
      volumes:
      - name: config
        secret:
          secretName: config
      containers:
      - image: charlieegan3/flashcards:9a50d240334a2c2514c387bbec4c2d1d
        ports:
        - name: http1
          containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /etc/rails/config
        resources:
          limits:
            cpu: "300m"
            memory: "200Mi"
          requests:
            cpu: "10m"
            memory: "10Mi"
