k8s/flashcards/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flashcards
  namespace: istio-system
  labels:
    app: flashcards
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://auth.charlieegan3.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.charlieegan3.com/oauth2/start?rd=https://flashcards.charlieegan3.com"
    nginx.ingress.kubernetes.io/upstream-vhost: flashcards.flashcards.charlieegan3.com
spec:
  tls:
  - hosts:
    - flashcards.charlieegan3.com
    secretName: flashcards-tls
  rules:
  - host: flashcards.charlieegan3.com
    http:
      paths:
      - path: /
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
